# web

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  build.sh  conanfile.txt  readme.md
common/: frontend.cc  frontend.h  rapidjson_util.cc  rapidjson_util.h  rapidjson_wrapper.cc  rapidjson_wrapper.h  spsc_executor.cc  spsc_executor.h  thread_name_builder.cpp  thread_name_builder.h  thunk_entry.h  timer_thread.cc  timer_thread.h  wait_group.h
patch/: find_package_patch.patch  usockets_patch.patch
resource/: chat.html  index.html
resource/scripts/: chat.js  main.js
resource/styles/: chat_style.css  style.css
resource/vue/: chat.html  chat_style.css
src/chat_server/: connection.h  main.cc  manager.cc  manager.h  room.cc  room.h
src/common/: frontend.cc  frontend.h
test/: test_chat_server.py
utils/: util.cc  util.h
